# precision

./: .gitignore  ChangeLog.md  Imprecise.html  LICENSE  TODO.org  doc-index.html  imprecise.cabal  imprecise.haddock  index-frames.html  index.html  mini_Imprecise.html  numeric-errors.cabal  precision.cabal  tolerance.cabal
src/: Approximate.hs  Imprecise.hs  Tolerance.hs
src/Data/: Approx.hs
src/Numeric/: Errors.hs  Precision.hs
