name:                numeric-errors
version:             0.1.0.0
synopsis:            Estimate rounding and sequence truncation errors
homepage:            https://github.com/ttuegel/numeric-errors
license:             LGPL-3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           (c) 2016 Thomas Tuegel
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Numeric.Errors
  other-extensions:    TypeFamilies
  build-depends:
      base >= 4.8 && < 4.10
    , ieee754 == 0.7.*
  hs-source-dirs:      src
  default-language:    Haskell2010
