name:                tolerance
version:             0.1.0.0
synopsis:            Estimate errors in finite-precision types
homepage:            https://github.com/ttuegel/imprecise
license:             Apache-2.0
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           (c) 2017 Thomas Tuegel
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Tolerance
  other-extensions:    TypeFamilies
  build-depends:
      base >= 4.8 && < 4.10
    , ieee754 == 0.7.*
  hs-source-dirs:      src
  default-language:    Haskell2010
