name:                tolerance
version:             0.1.0.0
synopsis:            Estimate errors in finite-precision types
homepage:            https://github.com/ttuegel/imprecise
license:             Apache-2.0
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           (c) 2017 Thomas Tuegel
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Approx
    Numeric.Precision
  build-depends:
      base
    , ieee754 >= 0.7
    , intervals >= 0.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
